--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome to my demented world</title>
+</head>
+<body>
+    <h1 style="font-size:big"> STUDY TIME MOTHERFUCKERS </h1>
 
-
-
-
+</body>
 </html>
 
