--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to my demented world</title>
+    <title>WWW.STUDYTIME.COM</title>
 </head>
 <body>
     <h1 style="font-size:big"> STUDY TIME MOTHERFUCKERS </h1>
