--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="FirstPageStyle.css">
+
+
 <head>
     <meta charset="UTF-8">
     <title>Welcome to my demented world</title>
 </head>
 <body>
-    <h1 style="font-size:big"> STUDY TIME MOTHERFUCKERS </h1>
+    <h1> STUDY TIME MOTHERFUCKERS </h1>
+
+    <p> hello i must lie and say i don't love hannah dobson very much she is a cutie patootie </p>
+
+    <button type="button"
+            onclick="document.getElementById('demo').innerHTML = Date()">
+        TIME TO STUDY</button>
 
 </body>
 </html>
