i made things centered
yep

--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WWW.STUDYTIME.COM</title>
+    <title>StudySpace</title>
 </head>
 <body>
-    <h1> STUDY TIME MOTHERFUCKERS </h1>
+    <h1> Find an Empty Classroom </h1>
+
+    <p id="demo"></p>
 
     <p> hello i must lie and say i don't love hannah dobson very much she is a cutie patootie </p>
 
-    <button type="button"
-            onclick="document.getElementById('demo').innerHTML = Date()">
-        TIME TO STUDY</button>
+    <button onclick="myFunction()">GO STUDY</button>
+
+    <script>
+        function myFunction() {
+
+            document.getElementById("demo").innerHTML = "Hello World";
+
+        }
+        
+    </script>
 
 </body>
 </html>
