text and format update

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <p id="demo"></p>
 
-    <p> hello i must lie and say i don't love hannah dobson very much she is a cutie patootie </p>
+    <p> See all currently available classrooms on campus! </p>
 
-    <button onclick="myFunction()">GO STUDY</button>
+    <button onclick="myFunction()">LET'S STUDY</button>
 
     <script>
         function myFunction() {
@@ -22,7 +22,7 @@
             document.getElementById("demo").innerHTML = "Hello World";
 
         }
-        
+
     </script>
 
 </body>
