Adding Table for Availability

--- a/availableRooms.html
+++ b/availableRooms.html
@@ -50,8 +50,8 @@
             <th>Layout</th>
         </tr>
         <tr>
-            <td>rooms[5]</td>
-            <td>getRoomAvailHours()[5]</td>
+            <td><script src="ids.js">rooms[5]</script></td>
+            <td><script src="ids.js">getRoomAvailHours()[5]</script></td>
             <td></td>
         </tr>
         <tr>
