font import added

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,14 +18,15 @@
         and you spent an hour crying on the phone to your mom last night <br>
         but you're still out here doing your best but it's not your best <br>
         because your computer is dead and every study space is full. <br>
-        Now imagine fucking the system and studying in empty classrooms <br>
+        Now imagine hecking the system and studying in empty classrooms <br>
         between class  where there are outlets and quiet space and not <br>
         your private hell. </p>
 
     <p></p>
 
     <p>That's what us, a team of quirky and <br>
-        loveable family friendly WPI students come in! We made this app during 2020 Hackathon for you!</p>
+        loveable family friendly WPI students come in! <br>
+        We made this app during 2020 Hackathon for you!</p>
 
 
 </body>
