--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="FirstPageStyle.css">
-
+<link rel="stylesheet" href="FirstPageStyle.css"> //style reference
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> //font import
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <script>
         function myFunction() {
 
-            document.getElementById("demo").innerHTML = "Hello World";
+            //document.getElementById("demo").innerHTML = "Hello World";
 
         }
 
