about us button added and functional

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="FirstPageStyle.css"> //style reference
-<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> //font import
+<link rel="stylesheet" href="FirstPageStyle.css">
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 <head>
     <meta charset="UTF-8">
     <title>StudySpace</title>
 </head>
+<div>
 <body>
-    <h1> Find an Empty Classroom </h1>
+
+    <h1> StudySpace Finder </h1>
 
     <p id="demo"></p>
 
@@ -25,6 +27,9 @@
 
     </script>
 
+    <a href="aboutUs.html"><button>About Us</button></a>
+
 </body>
+</div>
 </html>
 
