--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <script src="ids.js"></script>
 <script src="get_availabilities.js"></script>
-
+<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 <html lang="en">
 <link rel="stylesheet" href="FirstPageStyle.css">
 
@@ -15,9 +15,9 @@
 <body>
     <h1> Find an Empty Classroom </h1>
 
-    <p id="demo"></p>
-
     <p> See all currently available classrooms on campus! </p>
+
+    <p id="demo"></p>
 
     <button onclick="myFunction()">LET'S STUDY</button>
 
