idk man it's slightly prettier

--- a/index.html
+++ b/index.html
@@ -12,29 +12,35 @@
     <meta charset="UTF-8">
     <title>StudySpace</title>
 </head>
-<div>
 <body>
-
+    <div>
     <h1> StudySpace Finder </h1>
 
     <p id="demo"></p>
 
     <p> See all currently available classrooms on campus! </p>
 
-    <button onclick="myFunction()">LET'S STUDY</button>
+        <a href="availableRooms.html"><button style="font=italic">LET'S STUDY</button></a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-    <script>
+   <!--
+    <button onclick="myFunction()>LET'S STUDY</button>
+            <script>
         function myFunction() {
 
-            //document.getElementById("demo").innerHTML = "Hello World";
+            document.getElementById("demo").innerHTML = "Hello World";
 
         }
 
     </script>
-
-    <a href="aboutUs.html"><button>About Us</button></a>
-
+    -->
+    <a href="aboutUs.html"><button style="line-height=30px">About Us</button></a>
+    </div>
 </body>
-</div>
+
 </html>
 
