--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
     <title>StudySpace</title>
 </head>
 <body>
-    <div>
-    <h1> StudySpace Finder </h1>
+
+        <header>
+            <h1> StudySpace Finder </h1>
+        </header>
+
+    <section style="background-color: white; height: 600%">
 
     <p id="demo"></p>
 
     <p> See all currently available classrooms on campus! </p>
 
         <a href="availableRooms.html"><button style="font=italic">LET'S STUDY</button></a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
 
    <!--
     <button onclick="myFunction()>LET'S STUDY</button>
@@ -38,8 +37,19 @@
 
     </script>
     -->
-    <a href="aboutUs.html"><button style="line-height=30px">About Us</button></a>
-    </div>
+    </section>
+
+        <section class="flex-container">
+    <footer>
+       <!-- <div style="flex-basis: 20%"> <a href="aboutUs.html">About Us</a> </div>
+        <div style="flex-basis: 20%"> <a href="https://25live.collegenet.com/pro/wpi">25 Live</a></div>
+        <div style="flex-basis: 20%"> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a></div>
+        <div style="flex-basis: 20%"> <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a></div>
+    </footer>
+
+        </section>
+
+
 </body>
 
 </html>
