--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-        <header>
-            <h1> StudySpace Finder </h1>
-        </header>
+    <div class="header">
+        <h1>StudySpace Finder</h1>
+    </div>
 
-    <section style="background-color: white; height: 600%">
+<section style="background-color: white; height: 600%">
 
     <p id="demo"></p>
 
