--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p> See all currently available classrooms on campus! </p>
 
-        <a href="availableRooms.html"><button style="font=italic">LET'S STUDY</button></a>
+        <a href="availableRooms.html"><button>LET'S STUDY</button></a>
 
    <!--
     <button onclick="myFunction()>LET'S STUDY</button>
@@ -40,13 +40,15 @@
     </section>
 
         <section class="flex-container">
-    <footer>
-       <!-- <div style="flex-basis: 20%"> <a href="aboutUs.html">About Us</a> </div>
-        <div style="flex-basis: 20%"> <a href="https://25live.collegenet.com/pro/wpi">25 Live</a></div>
-        <div style="flex-basis: 20%"> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a></div>
-        <div style="flex-basis: 20%"> <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a></div>
-    </footer>
+        <div> <a href="aboutUs.html">About Us</a> </div>
+        <div> <a href="https://25live.collegenet.com/pro/wpi">25 Live</a></div>
+        <<div> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a></div>
+        <div> <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a></div>
 
+       <!-- <a href="https://25live.collegenet.com/pro/wpi">25 Live</a>
+        <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a>
+        <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a>
+        <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a> -->
         </section>
 
 
