--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>StudySpace Finder</h1>
     </div>
 
-<section style="background-color: white; height: 600%">
+<section style=" height: 600%">
 
     <p id="demo"></p>
 
