--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     -->
     </section>
 
-        <section class="flex-container">
-        <div> <a href="aboutUs.html">About Us</a> </div>
-        <div> <a href="https://25live.collegenet.com/pro/wpi">25 Live</a></div>
-        <<div> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a></div>
-        <div> <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a></div>
+        <section class="flex-container-footer">
+        <div> <a href="aboutUs.html"> About Us </a> </div>
+        <div> <a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
+        <div> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
+        <div> <a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
 
        <!-- <a href="https://25live.collegenet.com/pro/wpi">25 Live</a>
         <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a>
