buttons on bottom
you heard me

--- a/index.html
+++ b/index.html
@@ -18,37 +18,21 @@
         <h1>StudySpace Finder</h1>
     </div>
 
-<section style=" height: 600%">
-
-    <p id="demo"></p>
+    <section class="flex-container-middle">
 
     <p> See all currently available classrooms on campus! </p>
 
-        <a href="availableRooms.html"><button>LET'S STUDY</button></a>
+        <a href="availableRooms.html"><button>STUDY TIME</button></a>
 
-   <!--
-    <button onclick="myFunction()>LET'S STUDY</button>
-            <script>
-        function myFunction() {
-
-            document.getElementById("demo").innerHTML = "Hello World";
-
-        }
-
-    </script>
-    -->
     </section>
 
-        <section class="flex-container-footer">
-        <div> <a href="aboutUs.html"> About Us </a> </div>
-        <div> <a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
-        <div> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
-        <div> <a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
 
-       <!-- <a href="https://25live.collegenet.com/pro/wpi">25 Live</a>
-        <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a>
-        <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331">Reserve Library Tech Suite</a>
-        <a href="https://wpi.libcal.com/reserve/fistechsuite">Reserve a "Foisie"" Tech Suite</a> -->
+        <section class="flex-container-footer">
+        <div class="nav"> <a href="aboutUs.html"> About Us </a> </div>
+        <div class="nav"> <a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
+        <div class="nav"> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
+        <div class="nav"> <a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
+
         </section>
 
 
