--- a/index.html
+++ b/index.html
@@ -4,45 +4,37 @@
 <script src="get_availabilities.js"></script>
 
 <html lang="en">
-<link rel="stylesheet" href="FirstPageStyle.css">
-<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-
 
 <head>
     <meta charset="UTF-8">
     <title>StudySpace</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="FirstPageStyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="header">
-        <h1>StudySpace Finder</h1>
-        <p> See all currently available classrooms on campus! </p>
-    </div>
+<div class="header">
+    <h1>StudySpace Finder</h1>
+    <p> See all currently available classrooms on campus! </p>
+</div>
 
-    <section class="flex-container-middle">
+<section class="flex-container-middle">
 
     <p> See all currently available classrooms on campus! </p>
 
-        <a href="availableRooms.html"><button>STUDY TIME</button></a>
+    <a href="availableRooms.html">
+        <button class="theBigButton">STUDY TIME</button>
+    </a>
 
 
-   <!--
-    <button onclick="myFunction()>LET'S STUDY</button>
-            <script>
-        function myFunction() {
 
-            document.getElementById("demo").innerHTML = "Hello World";
-
+    <section class="flex-container-footer">
+        <div class="nav"><a href="aboutUs.html">About Us</a></div>
+        <div class="nav"><a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
+        <div class="nav"><a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
+        <div class="nav"><a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
     </section>
-
-
-        <section class="flex-container-footer">
-        <div class="nav"> <a href="aboutUs.html"> About Us </a> </div>
-        <div class="nav"> <a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
-        <div class="nav"> <a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
-        <div class="nav"> <a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
-
-        </section>
 
 
 </body>
