--- a/availableRooms.html
+++ b/availableRooms.html
@@ -9,7 +9,7 @@
     <div style="text-align: center;">Available Rooms:</div>
 </h1>
 <body>
-<div style=": center;">
+<div class="flex-container-table" style=": center;">
     <table align="center">
         <style>
             table {
