--- a/aboutUs.html
+++ b/aboutUs.html
@@ -28,6 +28,13 @@
         loveable family friendly WPI students come in! <br>
         We made this app during 2020 Hackathon for you!</p>
 
+    <section class="flex-container-footer">
+        <div class="nav"><a href="index.html">Home</a></div>
+        <div class="nav"><a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
+        <div class="nav"><a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
+        <div class="nav"><a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
+    </section>
+
 
 </body>
 </html>
