commit before pull

--- a/availableRooms.html
+++ b/availableRooms.html
@@ -53,7 +53,7 @@
         <tr>
             <td><script>document.write(rooms[5]);
             console.log(rooms['5']);</script></td>
-            <td><script>document.write(availHours['5']);</script></td>
+            <td id='hours'><script>document.write(availHours['5']);</script></td>
             <td></td>
         </tr>
         <tr>
