--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,19 +8,20 @@
 <body>
     <h1>What is This?</h1>
 
-    <p>Imagine you're a chemical engineering major, trying to figure out how to <br>
-        make a distillation column at the end of B Term your sophomore year but <br>
-        your group has nowhere to go because Foisie is full (and faculty tried <br>
-        steal it from you anyways so whatever) and the library is full and <br>
-        you have one hour until your next class but you spent half of it <br>
-        trying to find somewhere with an outlet to sit down because your laptop <br>
-        battery has died completely and life is just really hard right now <br>
-        and you spent an hour crying on the phone to your mom last night <br>
-        but you're still out here doing your best but it's not your best <br>
-        because your computer is dead and every study space is full. <br>
-        Now imagine hecking the system and studying in empty classrooms <br>
-        between class  where there are outlets and quiet space and not <br>
-        your private hell. </p>
+    <div class = "blockText">    <p>Imagine you're a chemical engineering major, trying to figure out how to
+        make a distillation column at the end of B Term your sophomore year but
+        your group has nowhere to go because Foisie is full (and faculty tried
+        steal it from you anyways so whatever) and the library is full and
+        you have one hour until your next class but you spent half of it
+        trying to find somewhere with an outlet to sit down because your laptop
+        battery has died completely and life is just really hard right now
+        and you spent an hour crying on the phone to your mom last night
+        but you're still out here doing your best but it's not your best
+        because your computer is dead and every study space is full.
+        Now imagine hecking the system and studying in empty classrooms
+        between class  where there are outlets and quiet space and not
+        your private hell. </p></div>
+
 
     <p></p>
 
