--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>About StudySpace</title>
 </head>
+<a href = "https://club-penguin-rewritten.fandom.com/wiki/Secret_Items">
+    <div class = "banner"></div></a>
 <body>
     <h1>What is This?</h1>
 
@@ -25,7 +27,7 @@
 
     <p></p>
 
-    <p>That's what us, a team of quirky and <br>
+    <p>That's when us, a team of quirky and <br>
         loveable family friendly WPI students come in! <br>
         We made this app during 2020 Hackathon for you!</p>
 
