--- a/availableRooms.html
+++ b/availableRooms.html
@@ -7,6 +7,9 @@
     <script src="availability.js"></script>
     <link rel="stylesheet" href="availableRoomsStyle.css">
 </HEAD>
+<a href="https://media.tenor.com/images/5bd5282f3ceae2a96a880c3f7c70e8fb/tenor.gif">
+    <div class="banner"></div>
+</a>
 <h1>
     <div style="text-align: center;">Available Rooms:</div>
 </h1>
@@ -64,6 +67,7 @@
 </section>
 <a href="index.html">
     <button> Back
-    </button></a>
+    </button>
+</a>
 </body>
 </html>
