--- a/availableRooms.html
+++ b/availableRooms.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <link rel="stylesheet" href="FirstPageStyle.css">
-<HEAD>
+<head>
+
+    <title>Take That Laurie!</title>
     <script src="ids.js"></script>
     <script src="get_availabilities.js"></script>
     <script src="availability.js"></script>
     <link rel="stylesheet" href="availableRoomsStyle.css">
-</HEAD>
+</head>
 <a href="https://media.tenor.com/images/5bd5282f3ceae2a96a880c3f7c70e8fb/tenor.gif">
     <div class="banner"></div>
 </a>
 <h1>
-    <div style="text-align: center;">Available Rooms:</div>
+    Available Rooms:
 </h1>
 <body>
 <section class="flex-container-table" style=": center;">
@@ -20,7 +22,7 @@
     </a>
     </div>
     <div>
-        <table align="center">
+        <table>
 
             <tr>
                 <th>Room</th>
