added loader and wait for responses

--- a/availableRooms.html
+++ b/availableRooms.html
@@ -3,13 +3,16 @@
 <link rel="stylesheet" href="FirstPageStyle.css">
 <HEAD>
     <script src="ids.js"></script>
-    <script src="get_availabilities.js"></script>
+    <!--<script src="get_availabilities.js"></script>-->
     <script src="availability.js"></script>
+	<script src="call25.js"></script>
+	<script src="updatePage.js"></script>
     <link rel="stylesheet" href="availableRoomsStyle.css">
 </HEAD>
 <h1>
     <div style="text-align: center;">Available Rooms:</div>
 </h1>
+	<div class="loader" id="loadingSymbol"></div>
 <body>
 <section class="flex-container-table" style=": center;">
     <div><a href="availableRooms.html">
