--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 <section class="flex-container-middle">
 
     <a href="availableRooms.html">
-        <button class="theBigButton">STUDY TIME</button>
+        <p>
+            <button class="theBigButton">STUDY NOW</button>
+        </p>
+        <p>
+            <button class="theBigButton">STUDY LATER</button>
+        </p>
     </a>
 
     <p> Good luck studying! </p>
