--- a/availableRooms.html
+++ b/availableRooms.html
@@ -17,8 +17,9 @@
 <h1>
     Available Rooms:
 </h1>
+<div class = "greyed" id = "grey"></div>
+<div class="loader" id="loadingSymbol"></div>
 <body>
-	<div class="loader" id="loadingSymbol"></div>
 <section class="flex-container-table" style=": center;">
     <div>
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
