--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>About StudySpace</title>
 </head>
+<div class="allContainer">
 <a href="https://club-penguin-rewritten.fandom.com/wiki/Secret_Items">
     <div class="banner"></div>
 </a>
@@ -42,4 +43,6 @@
 
 
 </body>
+
+</div>
 </html>
