i have accomplished nothing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="FirstPageStyle.css">
+
 <head>
     <meta charset="UTF-8">
     <title>About StudySpace</title>
+    <link rel="stylesheet" href="AllStyle.css">
+    <link rel="stylesheet" href="FirstPageStyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <div class="allContainer">
 <a href="https://club-penguin-rewritten.fandom.com/wiki/Secret_Items">
     <div class="banner"></div>
