--- a/availableRooms.html
+++ b/availableRooms.html
@@ -31,9 +31,9 @@
     <div class="flex-button">
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
     </div>
-    <div>
+    <div style="width:100%">
 
-        <table style="font-family: 'Gloria Hallelujah', cursive;">
+        <table style="font-family: 'Gloria Hallelujah', cursive;" style="width:100%">
 
             <tr>
                 <th>Room</th>
