--- a/availableRooms.html
+++ b/availableRooms.html
@@ -26,14 +26,14 @@
 <div class = "greyed" id = "grey"></div>
 <div class="loader" id="loadingSymbol"></div>
 
-<body>
+<body style="width:100%; align-content: center">
 <section class="flex-container-table">
     <div class="flex-button">
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
     </div>
-    <div style="width:100%">
+    <div style="width:100%;">
 
-        <table style="font-family: 'Gloria Hallelujah', cursive;" style="width:100%">
+        <table>
 
             <tr>
                 <th>Room</th>
@@ -82,6 +82,7 @@
         <button class="button" onclick="rButtonClicked()" id="rButton" disabled> ></button>
     </div>
 </section>
+
 <section class="flex-container-footer">
     <div class="nav"><a href="index.html">Home</a></div>
     <div class="nav"><a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
