--- a/availableRooms.html
+++ b/availableRooms.html
@@ -5,10 +5,12 @@
 
     <title>Take That Laurie!</title>
     <script src="ids.js"></script>
-    <!--<script src="get_availabilities.js"></script>-->
     <script src="availability.js"></script>
 	<script src="call25.js"></script>
 	<script src="updatePage.js"></script>
+	<script type="text/javascript">
+		window.onload = runGetRooms;
+	</script>
     <link rel="stylesheet" href="availableRoomsStyle.css">
 </head>
 <a href="https://media.tenor.com/images/5bd5282f3ceae2a96a880c3f7c70e8fb/tenor.gif">
