--- a/availableRooms.html
+++ b/availableRooms.html
@@ -28,7 +28,7 @@
 
 <body style="width:100%; align-content: center">
 <section class="flex-container-table">
-    <div class="flex-button">
+    <div>
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
     </div>
     <div style="width:100%;">
