--- a/availableRooms.html
+++ b/availableRooms.html
@@ -25,7 +25,13 @@
 </h1>
 <div class="greyed" id="grey"></div>
 <div class="loader" id="loadingSymbol"></div>
-
+<!--
+<div class="hiddenImage"><img id="imgR1"></div>
+<div class="hiddenImage"><img id="imgR2"></div>
+<div class="hiddenImage"><img id="imgR3"></div>
+<div class="hiddenImage"><img id="imgR4"></div>
+<div class="hiddenImage"><img id="imgR5"></div>
+-->
 <body>
 <section class="flex-container-table">
     <div class="flex-button">
@@ -38,23 +44,22 @@
             <tr>
                 <th>Room</th>
                 <th>Available For</th>
-                <th>Layout</th>
             </tr>
-            <tr id = "R2">
-                    <td id="roomR1"></td>
-                    <td id="hoursR1"></td>
+            <tr id="R1" onclick="openImage(1)">
+                <td id="roomR1"></td>
+                <td id="hoursR1"></td>
             </tr>
-            <tr id = "R2">
-                    <td id="roomR2"></td>
-                    <td id="hoursR2"></td>
+            <tr id="R2">
+                <td id="roomR2"></td>
+                <td id="hoursR2"></td>
             </tr>
             <tr id="R3">
-                    <td id="roomR3"></td>
-                    <td id="hoursR3"></td>
+                <td id="roomR3"></td>
+                <td id="hoursR3"></td>
             </tr>
-            <tr id="R4">
-                    <td id="roomR4"></td>
-                    <td id="hoursR4"></td>
+            <tr>
+                <td id="roomR4"></td>
+                <td id="hoursR4"></td>
             </tr>
 
             <tr id="R5">
