the table is now centered

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,6 +6,7 @@
     <title>About StudySpace</title>
     <link rel="stylesheet" href="AllStyle.css">
     <link rel="stylesheet" href="FirstPageStyle.css">
+    <link rel="stylesheet" href="screenSizeChanges.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
