--- a/availableRooms.html
+++ b/availableRooms.html
@@ -27,8 +27,8 @@
 <div class="greyed" id="grey"></div>
 <div class="loader" id="loadingSymbol"></div>
 
-<body style="width:100%; align-content: center">
-<section class="flex-container-table">
+<body style="width:100%; horiz-align: center">
+<section class="flex-container-table" style="horiz-align: center">
     <div>
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
     </div>
