--- a/availableRooms.html
+++ b/availableRooms.html
@@ -64,7 +64,7 @@
                 <td id="roomR4"></td>
                 <td id="hoursR4"></td>
             </tr>
-            <tr id="R5" onclick="openImage()">
+            <tr id="R5" onclick="openImage(5)">
                 <td id="roomR5"></td>
                 <td id="hoursR5"></td>
 
