the things that should be centered are centered once more

--- a/availableRooms.html
+++ b/availableRooms.html
@@ -35,7 +35,7 @@
 <h1>
     Available Rooms:
 </h1>
-<body style="width:100%; align-content: center">
+<body style="width:100%; align-content: center; max-height: 100%">
 <section class="flex-container-table">
     <div>
         <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
