--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     <p>
         <button class="theBigButton" id="studyLater" onclick="clickStudyLater()" disabled>STUDY LATER</button>
     </p>
-	
+
+	<p class = "squish">
+		When do you need to study?
+	</p>
 	<p>
 		<input type="date" name="daySelect" id="daySelect" oninput="document.getElementById('studyLater').disabled = false;">
 		
