--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,7 +32,9 @@
         because your computer is dead and every study space is full.
         Now imagine hecking the system and studying in empty classrooms
         between class where there are outlets and quiet space and not
-        your private hell. </p></div>
+        your private hell. </p>
+    <p>imagine you're fucking stupid well anyway that's my story.. goodbye.</p>
+</div>
 
 
 <p></p>
