--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,24 +19,21 @@
 <body>
 <h1>What is This?</h1>
 
-<div class="blockText">
-    <p>
+<p class="blockText" style="margin:0"> WPI wants to increase its student body population by 500 by 2023 - but we're already overcrowded
+        and finding study space can prove to be a challenge.
+    </p>
 
-    </p></div>
 
-
-<p></p>
-
-<p>That's when us, a team of quirky and <br>
+<p style="background-color:#F3752B;color:white;padding:5%; height:100%">That's when us, a team of quirky and <br>
     loveable family friendly WPI students come in! <br>
     We made this app during 2020 Hackathon for you!</p>
 
-<section class="flex-container-footer">
+<div class="flex-container-footer">
     <div class="nav"><a href="index.html">Home</a></div>
     <div class="nav"><a href="http://wpi.libcal.com/spaces?lid=914&gid=2331"> Reserve Library Tech Suite </a></div>
     <div class="nav"><a href="https://wpi.libcal.com/reserve/fistechsuite"> Reserve a "Foisie" Tech Suite </a></div>
     <div class="nav"><a href="https://25live.collegenet.com/pro/wpi"> 25 Live </a></div>
-</section>
+</div>
 
 
 </body>
