--- a/aboutUs.html
+++ b/aboutUs.html
@@ -14,17 +14,17 @@
 
 <div class="allContainer">
 <a href="https://club-penguin-rewritten.fandom.com/wiki/Secret_Items">
-    <div class="banner"></div>
+    <div class="banner" style="height:5vh"></div>
 </a>
 <body>
-<h1>What is This?</h1>
+<h1 style="background-color:#A20021;color:white;margin:0;height:18vh">What is This?</h1>
 
-<p class="blockText" style="margin:0"> WPI wants to increase its student body population by 500 by 2023 - but we're already overcrowded
+<p class="blockText" style="margin:0;height:50vh"> WPI wants to increase its student body population by 500 by 2023 - but we're already overcrowded
         and finding study space can prove to be a challenge.
     </p>
 
 
-<p style="background-color:#F3752B;color:white;padding:5%; height:100%">That's when us, a team of quirky and <br>
+<p style="background-color:#F3752B;color:white; height:22vh">That's when us, a team of quirky and <br>
     loveable family friendly WPI students come in! <br>
     We made this app during 2020 Hackathon for you!</p>
 
