--- a/availableRooms.html
+++ b/availableRooms.html
@@ -19,7 +19,7 @@
 
 
 <a href="https://media.tenor.com/images/5bd5282f3ceae2a96a880c3f7c70e8fb/tenor.gif">
-    <div class="banner"></div>
+    <div class="banner" style="top:0"></div>
 </a>
 
 <div class="greyed" id="grey" onclick="closeImage()"></div>
