it's like kinda good now

--- a/availableRooms.html
+++ b/availableRooms.html
@@ -32,7 +32,7 @@
 <div class="hiddenImage"><img id="imgR5"></div>
 
 
-<h1>
+<h1 style="background-color:#A20021;color:white;margin:0;height:18vh">
     Available Rooms:
 </h1>
 <div style="width:100%; align-content: center; height:80%">
