--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <div class="allContainer">
 
-    <div class="header">
-        <h1>Study Space Finder</h1>
-        <p> <b> See all currently available classrooms on campus! </b> </p>
+    <div style="background-color:#A20021;color:white;margin:0;height:40vh">
+        <h1 style="margin-top:10vh; margin-bottom:0">Study Space Finder</h1>
+        <p style="margin-top:0"> <b> See all currently available classrooms on campus! </b> </p>
     </div>
 
 <body>
