updated about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,14 +19,31 @@
 <body>
 <h1 style="background-color:#A20021;color:white;margin:0;height:18vh">What is This?</h1>
 
-<p class="blockText" style="margin:0;height:50vh"> WPI wants to increase its student body population by 500 by 2023 - but we're already overcrowded
+<p class="blockText" style="margin:0;height:43vh;text-align:center">
+        WPI wants to increase its student body population
+        by 500 by 2023 - but we're already overcrowded
         and finding study space can prove to be a challenge.
+        <br>
+        This sucks. A lot.
+        <br>
+        That's when us, a team of quirky and
+        loveable family friendly WPI students come in!
+        We made this app during 2020 Hackathon for you!
     </p>
 
 
-<p style="background-color:#F3752B;color:white; height:22vh">That's when us, a team of quirky and <br>
-    loveable family friendly WPI students come in! <br>
-    We made this app during 2020 Hackathon for you!</p>
+<p style="background-color:#F3752B;color:white; height:29vh">
+        This website was developed by:
+        <br>
+        Sean Horton
+        <br>
+        Madison Rutherford
+        <br>
+        Nathan Savard
+        <br>
+        Avery Smith
+
+</p>
 
 <div class="flex-container-footer">
     <div class="nav"><a href="index.html">Home</a></div>
