updated about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,7 +17,7 @@
     <div class="banner" style="height:5vh"></div>
 </a>
 <body>
-<h1 style="background-color:#A20021;color:white;margin:0;height:18vh">What is This?</h1>
+<h1 class="header" style="background-color:#A20021;color:white;margin:0;height:18vh">What is This?</h1>
 
 <p class="blockText" style="margin:0;height:43vh;text-align:center">
         WPI wants to increase its student body population
