--- a/availableRooms.html
+++ b/availableRooms.html
@@ -32,15 +32,15 @@
 <div class="hiddenImage"><img id="imgR5"></div>
 
 
-<h1 style="background-color:#A20021;color:white;margin:0;height:18vh">
+<h1 class="header" style="background-color:#A20021;color:white;margin:0;height:18vh">
     Available Rooms:
 </h1>
-<div style="width:100%; align-content: center; height:80%">
+<div style="width:100%; align-content: center; height:72vh">
     <section class="flex-container-table" style="height:100%">
         <div>
             <button class="button" onclick="lButtonClicked()" id="lButton" disabled><</button>
         </div>
-        <div style="width:100%; height:80vh">
+        <div style="width:100%">
 
             <table>
 
