--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,16 +32,17 @@
     </p>
 
 
-    <p style="background-color:#F3752B;color:white; height:29vh">
+    <p class = "easterEgg">
         This website was developed by:
         <br>
-        Sean Horton
+        <a  class = "easterEgg" href="https://66.media.tumblr.com/67b0fe0eff57a77164bc1fadc5dca5dd/dc50dd1e2c183ce9-f5/s640x960/2a748d733af0e9e3bfe0a65f46941aa701e4ae97.gif">Sean
+            Horton </a>
         <br>
-        Madison Rutherford
+        <a class ="easterEgg" href="https://www.youtube.com/watch?v=AqS2s4SvcaA">M</a>adi<a class = "easterEgg" href = "https://www.youtube.com/watch?v=EpttvvY5ERw">s</a>on Ruther<a class ="easterEgg" href = "https://www.youtube.com/watch?v=0PxnUAo4B_4">f</a>ord
         <br>
-        Nathan Savard
+        Na<a class = "easterEgg" href ="https://images-na.ssl-images-amazon.com/images/I/51IO708qWVL._AC_SX522_.jpg">t</a>han Savard
         <br>
-        Avery Smith
+        Avery <a class = "easterEgg" href = "https://www.linkedin.com/in/johnsmith1/">Smith</a>
 
     </p>
 
