--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
 
             <p> Good luck studying! </p>
+            <p style ="color:#FFFFFF; font-size:60%">Students: we need study Space <br>
+                I&E center ¯\_(ツ)_/¯</p>
+
 
 
         </div>
