--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,7 +21,7 @@
 
     <p class="blockText" style="margin:0;height:43vh;text-align:center">
         WPI wants to increase its student body population
-        by 500 by 2023 - but we're already overcrowded
+        by <a href = "https://files.slack.com/files-pri/TRNF01R2A-FSW6XPCKG/image.png">500</a> by <a href = "https://files.slack.com/files-pri/TRNF01R2A-FSTGUUZNG/image.png">2023</a> - but we're already overcrowded
         and finding study space can prove to be a challenge.
         <br>
         This sucks. A lot.
