--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div style="background-color:#A20021;color:white;margin:0;height:40vh">
         <h1 style="margin-top:10vh; margin-bottom:0">Study Space Finder</h1>
-        <p style="margin-top:0"><b> See all currently available classrooms on campus! </b></p>
+        <p style="margin-top:0"><b> See all currently available classrooms! </b></p>
     </div>
 
 
