--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="availability.js"></script>
     <script src="call25.js"></script>
     <script src="updatePage.js"></script>
-    <link rel="manifest" href="http://localhost:63342/Hackathon2020/manifest.json?_ijt=meo5lvlhs7pt2ipb1fskf9hrj7">
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="FirstPageStyle.css">
     <link rel="stylesheet" href="AllStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
