--- a/availableRooms.html
+++ b/availableRooms.html
@@ -16,6 +16,15 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#a20021">
+    <meta name="apple-mobile-web-app-title" content="Study@WPI">
+    <meta name="application-name" content="Study@WPI">
+    <meta name="msapplication-TileColor" content="#f9eae1">
+    <meta name="theme-color" content="#f9eae1">
 </head>
 
 
